feat(backend): sprint update with date-order validation; T- ids on task create